--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.1",
     "tsparticles": "^1.34.0",
+    "typewriter-effect": "^2.18.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
