--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
+    "react-responsive-carousel": "^3.2.21",
     "react-scripts": "4.0.3",
+    "react-starfield-animation": "^1.0.1",
     "styled-components": "^5.3.1",
     "tsparticles": "^1.34.0",
     "typewriter-effect": "^2.18.0",
